--- a/src/css/Bottom.module.css
+++ b/src/css/Bottom.module.css
@@ -1,3 +1,5 @@
 .bottom{display: flex;justify-content: center;align-items: center;padding:1rem;border-top:2px solid #ddd;background:#eee;border-radius:0 0 5px 5px;}
 .bottom input[type=text]{width:80%;height:30px;border:none;background:#fff;border-radius: 5px 0 0 5px;text-indent: 10px;outline: none;}
 .bottom button{background:orange;width:20%;height:30px;font-weight: bold;color:#fff;border-radius: 0 5px 5px 0;}
+
+.bottom.darkMode{background-color: #333;}
