--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,6 @@ html.darkMode {
 html,body{width:100vw;height:100vh}
 body{background: #868da2;accent-color:var(--color-accent);display: flex;align-items: center;justify-content: center;}
 
-#root{width: 100%;height: 100%;display: flex;flex-direction:column;justify-content: center;}
+#root{width: 100%;max-width:700px;height: 100%;display: flex;flex-direction:column;justify-content: center;}
 
 
